--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body{
     justify-content: space-around;
     flex-wrap: wrap;
     padding: 5vh;
+    gap: 1em;
 }
 
 .cabecalho-menu-logo{
@@ -42,7 +43,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 1em;
 }
 
 .logo-p{
@@ -53,6 +54,7 @@ body{
 .cabecalho-menu{
     display: flex;
     gap: 2em;
+    margin: 10px;
 }
 
 .cabecalho-menu-item{
@@ -77,6 +79,9 @@ body{
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap-reverse;
+    max-width: 70vw;
+    margin: auto;
+
 }
 
 .conteudo-principal-escrito{
@@ -123,7 +128,6 @@ body{
 
 .logo-g{
     border-radius: 50%;
-    margin: auto;
 }
 
 .container{
